k8s_yml模板/kibana.yaml
kind: Deployment
apiVersion: apps/v1
metadata:
  name: kibana
  namespace: elk
  labels:
    app: kibana
spec:
  replicas: 1
  selector:
    matchLabels:
      app: kibana
  template:
    metadata:
      labels:
        app: kibana
    spec:
      containers:
        - name: kibana
          image: 'docker.elastic.co/kibana/kibana:7.9.2'
          ports:
            - containerPort: 5601
              protocol: TCP
          resources:
            limits:
              cpu: '1'
              memory: 3Gi
            requests:
              cpu: 20m
              memory: 500Mi
          readinessProbe:
            exec:
              command:
                - sh
                - '-c'
                - |
                  #!/usr/bin/env bash -e
                  http () {
                      local path="${1}"
                      set -- -XGET -s --fail

                      if [ -n "${ELASTICSEARCH_USERNAME}" ] && [ -n "${ELASTICSEARCH_PASSWORD}" ]; then
                        set -- "$@" -u "${ELASTICSEARCH_USERNAME}:${ELASTICSEARCH_PASSWORD}"
                      fi

                      STATUS=$(curl --output /dev/null --write-out "%{http_code}" -k "$@" "http://localhost:5601${path}")
                      if [[ "${STATUS}" -eq 200 ]]; then
                        exit 0
                      fi

                      echo "Error: Got HTTP code ${STATUS} but expected a 200"
                      exit 1
                  }

                  http "/app/kibana"
          imagePullPolicy: IfNotPresent
          securityContext:
            capabilities:
              drop:
                - ALL
            runAsUser: 1000
            runAsNonRoot: true
      securityContext:
        fsGroup: 1000
  strategy:
    type: Recreate
---
apiVersion: v1
kind: Service
metadata:
  name: kibana
  namespace: elk
  labels:
    app: kibana
spec:
  ports:
    - port: 5601
      nodePort: 31601
  type: NodePort
  selector:
    app: kibana
